# glimpse

./: .gitignore  AGENTS.md  CLAUDE.md  Package.swift  README.md  agent.py  manifest.md  pyproject.toml  requirements.txt  spec.md  start.sh  usecases.md
.claude/: settings.json
.cursor/rules/: python-conda-env.mdc  start-app.mdc
Sources/OverlayChat/: AppDelegate.swift  ChatMessage.swift  ChatView.swift  ChatViewModel.swift  MessageBubble.swift  OllamaService.swift
benchmarks/: bench_capture_pipeline.py  bench_ollama_detail.py  bench_openai_vision.py  utils.py
config/: browser_allowlist.json
glimpse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
overlay/: GPU_OPTIMIZATION_NOTES.md  Package.swift  bundle.sh  ui_spec.md
overlay_server/: Package.swift
overlay_server/Sources/: AppDelegate.swift  OverlayContentView.swift  OverlayPanel.swift  WebSocketServer.swift
pitch/: build_deck.py  index.html  render.py  slides.html
screen_agent/: __init__.py  analyzer.py  capture.py  config.py  detector.py  escalator.py  main.py  memory.py  overlay.py  overlay_client.py  proposer.py
src/: config.py  main.py
src/api/: server.py
src/capture/: activity_feed.py  browser_content.py  event_tap.py  frame_compare.py  screenshot.py  triggers.py
src/llm/: __init__.py  (+2 more)
tests/: conftest.py  test_agent_pipeline.py  test_agent_resilience.py  test_browser_content.py  test_browser_content_agent.py  test_capture_pipeline.py  test_critique_agent.py  test_gemma_agent.py  test_general_agent.py  test_health.py  test_integration_browser_critique.py  test_llm.py  test_llm_timeouts.py  test_presentation_critique_agent.py  test_social_context_agent.py  test_stress.py  test_tools.py  test_ws_reconnect.py
(+59 files in other folders)
